Transaction logic, move to UUIDs (#6)
* backend: tie `Message` to `Transaction`, remove `Conversation` entity

* backend: rename `ChatController` to `TransactionController`

* backend: impl `MessageRepository`, `TransactionRepository`

* backend: migration to UUIDs, migrate models and repositories

* backend: migrate `PostController`,`PostService`,`SessionData` to UUIDs

* maven: add spring-boot-starter-webflux dependency

* backend: move Transaction Status to the Transaction class scope

* backend: change UUID annotations

* backend: helper functions to Picture & Transaction repositories

* backend: impl `TransactionService`

implements:
 - transaction creation,
 - message creation,
 - fetching of transaction info & messages

* backend: impl `TransactionController` & related request/response models

* maven: regenerate `PostAppAPI`

* backend: generate testing data automatically

* frontend: adjust to PostAppAPI changes, testing transactions
