# src/main/java/com/kukininj/PostApp/models/Message.java
@@ -1,20 +1,35 @@
 package com.kukininj.PostApp.models;
 
+import com.fasterxml.jackson.annotation.JsonIdentityInfo;
+import com.fasterxml.jackson.annotation.JsonIdentityReference;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.ObjectIdGenerators;
 import jakarta.persistence.*;
+import org.springframework.context.annotation.Lazy;
 
 import java.time.LocalDateTime;
+import java.util.UUID;
 
 @Entity
 public class Message {
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    Long id;
+    @GeneratedValue(generator = "UUID")
+    public UUID id;
 
     @ManyToOne
-    User user;
+    @Lazy
+    @JsonIdentityInfo(generator = ObjectIdGenerators.PropertyGenerator.class, property = "id")
+    @JsonIdentityReference(alwaysAsId = true)
+    @JsonProperty("userId")
+    public User user;
 
     @ManyToOne
-    Conversation conversation;
+    @Lazy
+    @JsonIdentityInfo(generator = ObjectIdGenerators.PropertyGenerator.class, property = "id")
+    @JsonIdentityReference(alwaysAsId = true)
+    @JsonProperty("transactionId")
+    public Transaction transaction;
 
-    LocalDateTime added;
+    public LocalDateTime added;
+    public String contents;
 }
